# file-formats

./: .gitignore  CMakeLists.txt  LICENSE
executable/pe/: README.md
font/ttf/: .gitignore  Makefile  README.md
font/ttf-cpp/: CMakeLists.txt  main.cpp
font/ttf-cpp/tables/: head.h  head_io.h  hhea.h  hhea_io.h  maxp.h  maxp_io.h  os2.cpp  os2.h  os2_io.h
font/ttf-cpp/ttf/: table_directory.h  types.h
font/ttf-cpp/util/: util.h
font/ttf/src/: main.c  print.c  print.h  record.c  record.h  ttf.h  ttftables.h  ttftypes.h
lib/image/: CMakeLists.txt
lib/image/examples/: image_ppm.cpp
lib/image/img/: image.h
lib/image/img/format/: ppm_parser.cpp  ppm_parser.h
